force-app/main/default/objects/IncentivePromotion__c/IncentivePromotion__c.object-meta.xml
<CustomObject>
    <label>Incentive Promotion</label>
    <nameField>
        <label>Nom de Incentive Promotion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives Promotion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>