force-app/main/default/objects/IncentivePromotion__c/fields/Codeincentive__c.field-meta.xml
<CustomField>
    <fullName>Codeincentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Incentive
GC_ioptions.inc_code</description>
    <label>Code incentive</label>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipLabel>Incentives Promotion</relationshipLabel>
    <relationshipName>Incentives_Promotion</relationshipName>
    <type>Lookup</type>
</CustomField>