force-app/main/default/objects/IncentivePromotion__c/fields/CodeOption__c.field-meta.xml
<CustomField>
    <fullName>CodeOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Option Référentiel
GC_ioptions.opt_code</description>
    <label>Code Option</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Incentives Promotion</relationshipLabel>
    <relationshipName>Incentives_Promotion</relationshipName>
    <type>Lookup</type>
</CustomField>