force-app/main/default/objects/IncentivePromotion__c/fields/ModeValorisation__c.field-meta.xml
<CustomField>
    <fullName>ModeValorisation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mode de valorisation de la promotion (% ou valeur)
GC_ioptions.oiop_type</description>
    <label>Mode Valorisation</label>
    <type>Checkbox</type>
</CustomField>