force-app/main/default/objects/IncentivePromotion__c/fields/ValorisationPromotion__c.field-meta.xml
<CustomField>
    <fullName>ValorisationPromotion__c</fullName>
    <label>Valorisation Promotion</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>