force-app/main/default/objects/IncentivePromotion__c/listViews/DEPLOIEMENT_JUIN_2017.listView-meta.xml
<ListView>
    <fullName>DEPLOIEMENT_JUIN_2017</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Actif__c</columns>
    <columns>Codeincentive__c</columns>
    <columns>CodeOption__c</columns>
    <columns>IDtiers__c</columns>
    <columns>ModeValorisation__c</columns>
    <columns>ValorisationPromotion__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeOption__c</field>
        <operation>contains</operation>
        <value>OP0717</value>
    </filters>
    <label>DEPLOIEMENT JUIN 2017</label>
    <language>fr</language>
</ListView>