force-app/main/default/objects/IncentivePromotion__c/listViews/DEPLOIEMENTS_2017.listView-meta.xml
<ListView>
    <fullName>DEPLOIEMENTS_2017</fullName>
    <columns>NAME</columns>
    <columns>Codeincentive__c</columns>
    <columns>CodeOption__c</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>8/21/2017 12:00 AM</value>
    </filters>
    <label>DEPLOIEMENTS 2017</label>
    <language>fr</language>
    <sharedTo>
        <role>ContrleurdExploitation</role>
        <role>ContrleurdeGestion</role>
        <role>DirecteurAdminetFinancier</role>
        <role>DirecteurCall</role>
        <role>DirecteurExcutif</role>
        <role>ResponsableContrledeGestion</role>
        <role>ResponsableMthodeetContrleInterne</role>
        <role>Supportutilisateur</role>
    </sharedTo>
</ListView>