force-app/main/default/objects/IncentivePromotion__c/listViews/DEPLOIEMENTS_2020.listView-meta.xml
<ListView>
    <fullName>DEPLOIEMENTS_2020</fullName>
    <columns>NAME</columns>
    <columns>Codeincentive__c</columns>
    <columns>CodeOption__c</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <label>DEPLOIEMENTS 2020</label>
    <language>fr</language>
    <sharedTo>
        <role>ContrleurdExploitation</role>
        <role>ContrleurdeGestion</role>
        <role>DirecteurAdminetFinancier</role>
        <role>DirecteurCall</role>
        <role>DirecteurExcutif</role>
        <role>ResponsableContrledeGestion</role>
        <role>ResponsableMthodeetContrleInterne</role>
        <role>Supportutilisateur</role>
    </sharedTo>
</ListView>