force-app/main/default/objects/IncentivePromotion__c/listViews/LAST_DEPLOY.listView-meta.xml
<ListView>
    <fullName>LAST_DEPLOY</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Actif__c</columns>
    <columns>Codeincentive__c</columns>
    <columns>CodeOption__c</columns>
    <columns>IDtiers__c</columns>
    <columns>ModeValorisation__c</columns>
    <columns>ValorisationPromotion__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>11/3/2020 12:00 AM</value>
    </filters>
    <label>LAST DEPLOY</label>
    <language>fr</language>
</ListView>