force-app/main/default/objects/IncentivePromotion__c/listViews/OPFLASH.listView-meta.xml
<ListView>
    <fullName>OPFLASH</fullName>
    <columns>NAME</columns>
    <columns>Codeincentive__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>OPFLASH</value>
    </filters>
    <label>OPFLASH</label>
    <language>fr</language>
</ListView>