force-app/main/default/objects/IncentivePromotion__c/listViews/REMISE_FOIRES_2014.listView-meta.xml
<ListView>
    <fullName>REMISE_FOIRES_2014</fullName>
    <columns>NAME</columns>
    <columns>Codeincentive__c</columns>
    <columns>ValorisationPromotion__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeOption__c</field>
        <operation>equals</operation>
        <value>OPFOIRES14</value>
    </filters>
    <label>REMISE FOIRES 2014</label>
    <language>fr</language>
</ListView>