force-app/main/default/objects/IncentivePromotion__c/listViews/REMISE_FOIRES_2016.listView-meta.xml
<ListView>
    <fullName>REMISE_FOIRES_2016</fullName>
    <columns>NAME</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeOption__c</field>
        <operation>equals</operation>
        <value>OPFOIRES16</value>
    </filters>
    <label>REMISE FOIRES 2016</label>
    <language>fr</language>
</ListView>