force-app/main/default/objects/IncentivePromotion__c/listViews/TEST_INFO_DC.listView-meta.xml
<ListView>
    <fullName>TEST_INFO_DC</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Actif__c</columns>
    <columns>Codeincentive__c</columns>
    <columns>CodeOption__c</columns>
    <columns>IDtiers__c</columns>
    <columns>ModeValorisation__c</columns>
    <columns>ValorisationPromotion__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codeincentive__c</field>
        <operation>startsWith</operation>
        <value>2021</value>
    </filters>
    <label>TEST_INFO_DC</label>
</ListView>